--- a/air-freight.html
+++ b/air-freight.html
@@ -130,28 +130,28 @@
 
     <section class="service_sub_sec2">
         <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
                     <h3>Supervision</h3>
                     <p>Compare your rate and transit time alternatives, process shipments and track your shipping order
                         with our advanced online tools.</p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>DG Agent with GCAA and IATA Approval</h3>
                     <p>Approved by GCAA ( General Civil Aviation Authority) and IATA (International Air Transport
                         Association) to handle dangerous cargo.</p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
                     <h3>Clearance for Cross Border Transportation</h3>
                     <p>We ensure a smooth and comfortable export/import clearance for you so that you receive your goods
                         on time in the required place.</p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>Quality Temperature Controlled Environment</h3>
                     <p>Your option for the air transportation of temperature-sensitive goods. Shipments travel in
