--- a/cross-trade.html
+++ b/cross-trade.html
@@ -136,7 +136,7 @@
 
     <section class="service_sub_sec2">
         <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
                     <h3>Affordable</h3>
                     <p>
@@ -145,7 +145,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>Customised Approach</h3>
                     <p>
@@ -154,7 +154,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
                     <h3>Global Extensions</h3>
                     <p>
@@ -163,7 +163,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>Efficient Team</h3>
                     <p>
