--- a/road-freight.html
+++ b/road-freight.html
@@ -135,7 +135,7 @@
 
     <section class="service_sub_sec2">
         <div class="row">
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
                     <h3>Excellent Road Network</h3>
                     <p>
@@ -144,7 +144,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>Dynamic transportation Fleet</h3>
                     <p>
@@ -152,7 +152,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeRight">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card1">
                     <h3>Highly trained professionals</h3>
                     <p>
@@ -161,7 +161,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeLeft">
+            <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 service_sub_sec2_col animate fadeInUp">
                 <div class="service_sub_sec2_card2">
                     <h3>All types of transportation</h3>
                     <p>
